
=== (next) ===
CHANGED: to use secure buffer comparison from SpecTools
CHANGED: to support events as defined in FTN13 v1.1

=== 0.9.7 (2018-05-20) ===
FIXED: to use gen_params.bits for derivedKey()
FIXED: to use UUID as IV for encryptedKey()

=== 0.9.6 (2018-05-18) ===
NEW: external key ID prefix for key listing
NEW: upgraded to FTN13 v1.1

=== 0.9.5 (2018-05-17) ===
NEW: plain "Password" plugin support
NEW: "HMAC" plugin support

=== 0.9.4 (2018-05-12) ===
CHANGED: to use FTN3.1 specs from invoker
FIXED: updated specs symlinks
FIXED: to add specs into release package

=== 0.9.3 (2018-05-11) ===
CHANGED: to use FTN13 v1.0 specs instead of v0.3

=== 0.9.2 (2018-04-23) ===
CHANGED: upgraded dependency versions

=== 0.9.1 (2018-02-13) ===
FIXED: to check failure limit on sign/verify

=== 0.9.0 (2018-02-12) ===
Initial version