@@ -161,8 +161,17 @@ class SQLStorage extends EncryptedStorage {
         this._evt.addXferEvent( xfer, 'SV_UPD', evt_data );
 
         //---
-        xfer.execute( as );
-        as.successStep();
+        as.add(
+            ( as ) => {
+                xfer.execute( as );
+                as.successStep();
+            },
+            ( as, err ) => {
+                if ( err === 'XferCondition' ) {
+                    as.error( 'UnknownKeyID' );
+                }
+            }
+        );
     }
 }
 
