@@ -41,9 +41,21 @@
         "type": "KeyType",
         "params": "GenParams",
         "created": "Timestamp",
-        "used_times": "NotNegativeInteger",
-        "used_bytes": "NotNegativeInteger",
-        "sig_failures": "NotNegativeInteger"
+        "times": "NotNegativeInteger",
+        "bytes": "NotNegativeInteger",
+        "failures": "NotNegativeInteger",
+        "used_times": {
+          "type": "NotNegativeInteger",
+          "desc": "Deprecated"
+        },
+        "used_bytes": {
+          "type": "NotNegativeInteger",
+          "desc": "Deprecated"
+        },
+        "sig_failures": {
+          "type": "NotNegativeInteger",
+          "desc": "Deprecated"
+        }
       }
     },
     "KeyIDList": {
@@ -85,9 +97,5 @@
       "maxlen": 128,
       "desc": "Most ciphers accept only block size, e.g. 16 bytes"
     }
-  },
-  "requires": [
-    "SecureChannel",
-    "BinaryData"
-  ]
+  }
 }
