@@ -1,7 +1,8 @@
 
 === (next) ===
 CHANGED: to use secure buffer comparison from SpecTools
-CHANGED: to support events as defined in FTN13 v1.1
+NEW: to support events as defined in FTN13 v1.1
+NEW: FTN13 v1.1 addStats()
 
 === 0.9.7 (2018-05-20) ===
 FIXED: to use gen_params.bits for derivedKey()
